introduce BookingDto and BookingStatus enum; refactor BookingService to use BookingDto for booking operations